--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <script src="script.js"></script>
 </head>
 <body>
-  <h1>Module 4 /h1>
+  <h1>Module 4 </h1>
   check the console if it works 
 </body>
 </html>
